@@ -293,12 +293,13 @@ details. */
 	   in6addr_any, in6addr_loopback.
       158: Export bindresvport, bindresvport_sa, iruserok_sa, rcmd_af,
 	   rresvport_af.
+      159: Export posix_openpt.
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 158
+#define CYGWIN_VERSION_API_MINOR 159
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
