@@ -1,7 +1,6 @@
 /* tty.cc
 
-   Copyright 1997, 1998, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2008, 2009,
-   2010, 2011 Red Hat, Inc.
+   Copyright 1997, 1998, 2000, 2001, 2002 Red Hat, Inc.
 
 This file is part of Cygwin.
 
@@ -10,9 +9,10 @@ Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
 details. */
 
 #include "winsup.h"
-#include "miscfuncs.h"
 #include <unistd.h>
 #include <utmp.h>
+#include <wingdi.h>
+#include <winuser.h>
 #include <sys/cygwin.h>
 #include "cygerrno.h"
 #include "security.h"
@@ -21,15 +21,11 @@ details. */
 #include "dtable.h"
 #include "cygheap.h"
 #include "pinfo.h"
+#include "cygserver.h"
 #include "shared_info.h"
+#include "cygthread.h"
 
-HANDLE NO_COPY tty_list::mutex = NULL;
-
-extern "C" int
-getpt (void)
-{
-  return open ("/dev/ptmx", O_RDWR | O_NOCTTY);
-}
+extern fhandler_tty_master *tty_master;
 
 extern "C" int
 posix_openpt (int oflags)
@@ -40,15 +36,13 @@ posix_openpt (int oflags)
 extern "C" int
 grantpt (int fd)
 {
-  cygheap_fdget cfd (fd);
-  return cfd < 0 ? -1 : 0;
+  return 0;
 }
 
 extern "C" int
 unlockpt (int fd)
 {
-  cygheap_fdget cfd (fd);
-  return cfd < 0 ? -1 : 0;
+  return 0;
 }
 
 extern "C" int
@@ -61,18 +55,21 @@ revoke (char *ttyname)
 extern "C" int
 ttyslot (void)
 {
-  if (myself->ctty <= 0 || iscons_dev (myself->ctty))
+  if (NOTSTATE (myself, PID_USETTY))
     return -1;
-  return device::minor (myself->ctty);
+  return myself->ctty;
 }
+
+HANDLE NO_COPY tty_list::mutex = NULL;
 
 void __stdcall
 tty_list::init_session ()
 {
-  char mutex_name[MAX_PATH];
-  char *name = shared_name (mutex_name, "tty_list::mutex", 0);
+  char mutex_name[CYG_MAX_PATH];
+  /* tty_list::mutex is used while searching for a tty slot. It's necessary
+     while finding console window handle */
 
-  /* tty_list::mutex is used while searching for a tty slot */
+  char *name = shared_name (mutex_name, "tty_list::mutex", 0);
   if (!(mutex = CreateMutex (&sec_all_nih, FALSE, name)))
     api_fatal ("can't create tty_list::mutex '%s', %E", name);
   ProtectHandle (mutex);
@@ -83,19 +80,104 @@ tty::init_session ()
 {
   if (!myself->cygstarted && NOTSTATE (myself, PID_CYGPARENT))
     cygheap->fdtab.get_debugger_info ();
+
+  if (NOTSTATE (myself, PID_USETTY))
+    return;
+  if (myself->ctty == -1)
+    if (NOTSTATE (myself, PID_CYGPARENT))
+      myself->ctty = cygwin_shared->tty.attach (myself->ctty);
+    else
+      return;
+  if (myself->ctty == -1)
+    termios_printf ("Can't attach to tty");
+}
+
+/* Create session's master tty */
+
+void __stdcall
+tty::create_master (int ttynum)
+{
+  device ttym = *ttym_dev;
+  ttym.setunit (ttynum); /* CGF FIXME device */
+  tty_master = (fhandler_tty_master *) build_fh_dev (ttym);
+  if (tty_master->init ())
+    api_fatal ("Can't create master tty");
+  else
+    {
+      /* Log utmp entry */
+      struct utmp our_utmp;
+      DWORD len = sizeof our_utmp.ut_host;
+
+      bzero ((char *) &our_utmp, sizeof (utmp));
+      time (&our_utmp.ut_time);
+      strncpy (our_utmp.ut_name, getlogin (), sizeof (our_utmp.ut_name));
+      GetComputerName (our_utmp.ut_host, &len);
+      __small_sprintf (our_utmp.ut_line, "tty%d", ttynum);
+      if ((len = strlen (our_utmp.ut_line)) >= UT_IDLEN)
+	len -= UT_IDLEN;
+      else
+	len = 0;
+      strncpy (our_utmp.ut_id, our_utmp.ut_line + len, UT_IDLEN);
+      our_utmp.ut_type = USER_PROCESS;
+      our_utmp.ut_pid = myself->pid;
+      myself->ctty = ttynum;
+      login (&our_utmp);
+    }
 }
 
 int __stdcall
-tty_list::attach (int n)
+tty_list::attach (int num)
 {
-  int res;
-  if (iscons_dev (n))
-    res = -1;
-  else if (n != -1)
-    res = connect (device::minor (n));
-  else
-    res = -1;
-  return res;
+  if (num != -1)
+    {
+      return connect (num);
+    }
+  if (NOTSTATE (myself, PID_USETTY))
+    return -1;
+  return allocate (true);
+}
+
+void
+tty_list::terminate ()
+{
+  if (NOTSTATE (myself, PID_USETTY))
+    return;
+  int ttynum = myself->ctty;
+
+  /* Keep master running till there are connected clients */
+  if (ttynum != -1 && ttys[ttynum].master_pid == myself->pid)
+    {
+      tty *t = ttys + ttynum;
+      CloseHandle (tty_master->from_master);
+      CloseHandle (tty_master->to_master);
+      /* Wait for children which rely on tty handling in this process to
+	 go away */
+      for (int i = 0; ; i++)
+	{
+	  if (!t->slave_alive ())
+	    break;
+	  if (i >= 100)
+	    {
+	      small_printf ("waiting for children using tty%d to terminate\n",
+			    ttynum);
+	      i = 0;
+	    }
+
+	  low_priority_sleep (200);
+	}
+
+      lock_ttys here ();
+
+      termios_printf ("tty %d master about to finish", ttynum);
+      CloseHandle (tty_master->get_io_handle ());
+      CloseHandle (tty_master->get_output_handle ());
+
+      t->init ();
+
+      char buf[20];
+      __small_sprintf (buf, "tty%d", ttynum);
+      logout (buf);
+    }
 }
 
 int
@@ -108,8 +190,7 @@ tty_list::connect (int ttynum)
     }
   if (!ttys[ttynum].exists ())
     {
-      termios_printf ("pty %d was not allocated", ttynum);
-      set_errno (ENXIO);
+      termios_printf ("tty %d was not allocated", ttynum);
       return -1;
     }
 
@@ -122,106 +203,161 @@ tty_list::init ()
   for (int i = 0; i < NTTYS; i++)
     {
       ttys[i].init ();
-      ttys[i].setntty (DEV_PTYS_MAJOR, i);
+      ttys[i].setntty (i);
     }
 }
 
-/* Search for a free tty and allocate it.
+/* Search for tty class for our console. Allocate new tty if our process is
+   the only cygwin process in the current console.
    Return tty number or -1 if error.
+   If flag == 0, just find a free tty.
  */
 int
-tty_list::allocate (HANDLE& r, HANDLE& w)
+tty_list::allocate (bool with_console)
 {
-  lock_ttys here;
+  HWND console;
   int freetty = -1;
+  HANDLE hmaster = NULL;
 
-  tty *t = NULL;
+  /* FIXME: This whole function needs a protective mutex. */
+
+  lock_ttys here;
+
+  if (!with_console)
+    console = NULL;
+  else if (!(console = GetConsoleWindow ()))
+    {
+      char oldtitle[TITLESIZE];
+
+      if (!GetConsoleTitle (oldtitle, TITLESIZE))
+	{
+	  termios_printf ("Can't read console title");
+	  goto out;
+	}
+
+      char buf[40];
+
+      __small_sprintf (buf, "cygwin.find.console.%d", myself->pid);
+      SetConsoleTitle (buf);
+      for (int times = 0; times < 25; times++)
+	{
+	  Sleep (10);
+	  if ((console = FindWindow (NULL, buf)))
+	    break;
+	}
+      SetConsoleTitle (oldtitle);
+      Sleep (40);
+      if (console == NULL)
+	{
+	  termios_printf ("Can't find console window");
+	  goto out;
+	}
+    }
+
+  /* Is a tty allocated for console? */
   for (int i = 0; i < NTTYS; i++)
-    if (ttys[i].not_allocated (r, w))
-      {
-	t = ttys + i;
-	t->init ();
-	t->setsid (-1);
-	freetty = i;
-	break;
-      }
-
-  if (freetty >= 0)
-    termios_printf ("pty%d allocated", freetty);
-  else
     {
-      system_printf ("No pty allocated");
-      r = w = NULL;
+      if (!ttys[i].exists ())
+	{
+	  if (freetty < 0)	/* Scanning? */
+	    freetty = i;	/* Yes. */
+	  if (!with_console)	/* Do we want to attach this to a console? */
+	    break;		/* No.  We've got one. */
+	}
+
+      /* FIXME: Is this right?  We can potentially query a "nonexistent"
+	 tty slot after falling through from the above? */
+      if (with_console && ttys[i].gethwnd () == console)
+	{
+	  termios_printf ("console %x already associated with tty%d",
+		console, i);
+	  /* Is the master alive? */
+	  hmaster = OpenProcess (PROCESS_DUP_HANDLE, FALSE, ttys[i].master_pid);
+	  if (hmaster)
+	    {
+	      CloseHandle (hmaster);
+	      freetty = i;
+	      goto out;
+	    }
+	  /* Master is dead */
+	  freetty = i;
+	  break;
+	}
     }
 
+  /* There is no tty allocated to console, allocate the first free found */
+  if (freetty == -1)
+    goto out;
+
+  tty *t;
+  t = ttys + freetty;
+  t->init ();
+  t->setsid (-1);
+  t->sethwnd (console);
+
+out:
+  if (freetty < 0)
+    system_printf ("No tty allocated");
+  else if (!with_console)
+    {
+      termios_printf ("tty%d allocated", freetty);
+      here.dont_release (); /* exit with mutex still held -- caller has more work to do */
+    }
+  else
+    {
+      termios_printf ("console %p associated with tty%d", console, freetty);
+      if (!hmaster)
+	tty::create_master (freetty);
+    }
   return freetty;
-}
-
-bool
-tty::not_allocated (HANDLE& r, HANDLE& w)
-{
-  /* Attempt to open the from-master side of the tty.  If it is accessible
-     then it exists although we may not have privileges to actually use it. */
-  char pipename[sizeof("ptyNNNN-from-master")];
-  __small_sprintf (pipename, "pty%d-from-master", get_unit ());
-  /* fhandler_pipe::create returns 0 when creation succeeds */
-  return fhandler_pipe::create (&sec_none, &r, &w,
-				fhandler_pty_common::pipesize, pipename,
-				0) == 0;
-}
-
-bool
-tty::exists ()
-{
-  HANDLE r, w;
-  bool res;
-  if (!not_allocated (r, w))
-    res = true;
-
-  else
-    {
-      /* Handles are left open when not_allocated finds a non-open "tty" */
-      CloseHandle (r);
-      CloseHandle (w);
-      res = false;
-    }
-  debug_printf ("exists %d", res);
-  return res;
 }
 
 bool
 tty::slave_alive ()
 {
+  return alive (TTY_SLAVE_ALIVE);
+}
+
+bool
+tty::alive (const char *fmt)
+{
   HANDLE ev;
-  if ((ev = open_inuse (READ_CONTROL)))
+  char buf[CYG_MAX_PATH];
+
+  shared_name (buf, fmt, ntty);
+  if ((ev = OpenEvent (EVENT_ALL_ACCESS, FALSE, buf)))
     CloseHandle (ev);
   return ev != NULL;
 }
 
 HANDLE
-tty::open_mutex (const char *mutex, ACCESS_MASK access)
+tty::open_output_mutex ()
 {
-  char buf[MAX_PATH];
-  shared_name (buf, mutex, get_unit ());
-  return OpenMutex (access, TRUE, buf);
+  return open_mutex (OUTPUT_MUTEX);
 }
 
 HANDLE
-tty::open_inuse (ACCESS_MASK access)
+tty::open_input_mutex ()
 {
-  char buf[MAX_PATH];
-  shared_name (buf, TTY_SLAVE_ALIVE, get_unit ());
-  return OpenEvent (access, FALSE, buf);
+  return open_mutex (INPUT_MUTEX);
 }
 
 HANDLE
-tty::create_inuse (PSECURITY_ATTRIBUTES sa)
+tty::open_mutex (const char *mutex)
+{
+  char buf[CYG_MAX_PATH];
+  shared_name (buf, mutex, ntty);
+  return OpenMutex (MUTEX_ALL_ACCESS, TRUE, buf);
+}
+
+HANDLE
+tty::create_inuse (const char *fmt)
 {
   HANDLE h;
-  char buf[MAX_PATH];
+  char buf[CYG_MAX_PATH];
 
-  shared_name (buf, TTY_SLAVE_ALIVE, get_unit ());
-  h = CreateEvent (sa, TRUE, FALSE, buf);
+  shared_name (buf, fmt, ntty);
+  h = CreateEvent (&sec_all, TRUE, FALSE, buf);
   termios_printf ("%s %p", buf, h);
   if (!h)
     termios_printf ("couldn't open inuse event, %E", buf);
@@ -234,21 +370,19 @@ tty::init ()
   output_stopped = 0;
   setsid (0);
   pgid = 0;
-  was_opened = false;
+  hwnd = NULL;
+  was_opened = 0;
   master_pid = 0;
-  is_console = false;
 }
 
 HANDLE
-tty::get_event (const char *fmt, PSECURITY_ATTRIBUTES sa, BOOL manual_reset)
+tty::get_event (const char *fmt, BOOL manual_reset)
 {
   HANDLE hev;
-  char buf[MAX_PATH];
+  char buf[CYG_MAX_PATH];
 
-  shared_name (buf, fmt, get_unit ());
-  if (!sa)
-    sa = &sec_all;
-  if (!(hev = CreateEvent (sa, manual_reset, FALSE, buf)))
+  shared_name (buf, fmt, ntty);
+  if (!(hev = CreateEvent (&sec_all, manual_reset, FALSE, buf)))
     {
       termios_printf ("couldn't create %s", buf);
       set_errno (ENOENT);	/* FIXME this can't be the right errno */
@@ -272,12 +406,4 @@ void
 lock_ttys::release ()
 {
   ReleaseMutex (tty_list::mutex);
-}
-
-const char *
-tty_min::ttyname ()
-{
-  device d;
-  d.parse (ntty);
-  return d.name;
 }
