@@ -1,3 +1,10 @@
+2006-07-18  Corinna Vinschen  <corinna@vinschen.de>
+
+	* cygwin.din (posix_openpt): Export.
+	* tty.cc (posix_openpt): New function.
+	* include/cygwin/stdlib.h (posix_openpt): Declare.
+	* include/cygwin/version.h: Bump API minor number.
+
 2006-07-17  Christopher Faylor  <cgf@timesys.com>
 
 	GCC 4.1 fixes.
